// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`string() should return an error for non-string values 1`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should return an error for non-string values 2`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should return an error for non-string values 3`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should return an error for non-string values 4`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should return an error for non-string values 5`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should return an error for non-string values 6`] = `
Object {
  "children": null,
  "message": "Value should be a string",
  "path": "",
}
`;

exports[`string() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
